test_compile_errors/tests/compile-fail/v_arg_num.stderr
error: unexpected end of macro invocation
 --> $DIR/v_arg_num.rs:7:5
  |
7 |     infov!();
  |     ^^^^^^^^^ missing tokens in macro arguments

error: no rules expected the token `4`
  --> $DIR/v_arg_num.rs:11:34
   |
11 |     infov!("prefix", "{}", true, 4);
   |                                  ^ no rules expected this token in macro call

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/v_arg_num.rs`

For more information about this error, try `rustc --explain E0601`.
